# pykep

./: .buildinfo  .clang-format  .clang-tidy  .clangd  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  anomalies.html  api.html  approximations.html  appveyor.yml  azure-pipelines.yml  bibliography.html  build.sh  changelog.html  codecov.yml  config.hpp.in  constants.html  credits.html  downloading.html  elements.html  epoch.html  flyby.html  genindex.html  gym.html  index.html  installation.html  kep3-config.cmake.in  kep3_devel.yml  keplerian_toolbox-config.cmake.in  lambert.html  leg.html  main.cpp  objects.inv  planet.html  plot.html  propagation.html  search.html  (+7 more)
PyKEP/: CMakeLists.txt  PyKEP.cpp  PyKEPPythonSetup.cmake  __init__.py  boost_python_container_conversions.h  boost_python_p_exceptions.h  exceptions.h  python_packages_dir.py  utils.h
PyKEP/core/: CMakeLists.txt  __init__.py  __init__.py~  _plots.py  core.cpp  core.cpp~  traj_plots.py
PyKEP/doc/: Makefile  conf.py  credits.rst  documentation.rst  downloading.rst  index.rst  installation.rst  system.rst
PyKEP/examples/: CMakeLists.txt  __init__.py  _ex1.py  _ex10.py  _ex2.py  _ex3.py  _ex4.py  _ex5.py  _ex6.py  _ex7.py  _ex8.py  _ex9.py  _ex_utilities.py  ex1.py~  ex2.py
PyKEP/interplanetary/: CMakeLists.txt  __init__.py  _mga_1dsm.py  _mga_lt_nep.py
PyKEP/kep_examples/: CMakeLists.txt  CMakeLists.txt~  __init__.py  __init__.py~  _ex1.py  _ex1.py~  _ex3.py  _ex4.py  ex1.py~  ex2.py~
PyKEP/orbit_plots/: __init__.py  __init__.py~  _plots.py  _plots.py~
PyKEP/phasing/: CMakeLists.txt  __init__.py  _dbscan.py  _knn.py  _lambert.py
PyKEP/planet/: __init__.py  planet.cpp  python_base.h
PyKEP/planets/: CMakeLists.txt  __init__.py  planets.cpp  python_base.h
PyKEP/pontryagin/: CMakeLists.txt  __init__.py  _dynamics.py  _leg.py
PyKEP/sims_flanagan/: __init__.py  sims_flanagan.cpp
PyKEP/traj/: CMakeLists.txt  __init__.py  _mga_1dsm.py  _mga_lt_nep.py
PyKEP/trajectory_optimisation/: CMakeLists.txt  __init__.py  _mr_lt_nep.py
PyKEP/trajopt/: CMakeLists.txt  __init__.py  _direct.py  _indirect.py  _lt_margo.py  _mga_1dsm.py  _mga_lt_nep.py  _mr_lt_nep.py  _pl2pl_N_impulses.py
PyKEP/util/: __init__.py  util.cpp
PyKEP/utils/: CMakeLists.txt  __init__.py  utils.cpp
benchmark/: CMakeLists.txt  convert_anomalies_benchmark.cpp  lambert_problem_benchmark.cpp  leg_sf_benchmark_simple.cpp  leg_sims_flanagan_benchmark.cpp  leg_sims_flanagan_udp_bench.hpp  leg_zoh_mismatch_benchmark.cpp  propagate_lagrangian_benchmark.cpp  stm_benchmark.cpp
benchmark/notebooks/: benchmarkudplaiface.ipynb  sf_gradient.ipynb
examples/: CMakeLists.txt  ex1.html  ex1.ipynb  ex10.html  ex11.html  ex12.html  ex13.html  ex2.html  ex2.ipynb  ex3.html  ex3.ipynb  ex4.html  ex5.html  ex6.html  ex7.html  ex8.html  ex9.html  gravity_spherical_harmonic.html  gravity_spherical_harmonic.ipynb  hera_trajectory.html  index.html  lambert_test.cpp  propagate_lagrangian_test.cpp
pykep/: CMakeLists.txt  __init__.py  __init__.py.in  _patch_epoch.py  _patch_planet.py  _version.py.in  boost_python_container_conversions.h  boost_python_p_exceptions.h  common_utils.cpp  common_utils.hpp  core.cpp  docstrings.cpp  docstrings.hpp  exceptions.h  expose_udplas.cpp  expose_udplas.hpp  python_udpla.cpp  python_udpla.hpp  test.py  test_core.py  test_leg_sims_flanagan.py  test_leg_zoh.py  test_ta.py  test_trajopt.py  test_udplas.py  test_utils.py  utils.h
pykep/core/: CMakeLists.txt  __init__.py  core.cpp  core_docstrings.cpp  core_docstrings.hpp  docstrings.cpp  docstrings.hpp
pykep/data/: CMakeLists.txt  tle.txt
pykep/examples/: CMakeLists.txt  __init__.py  _ex1.py  _ex10.py  _ex11.py  _ex2.py  _ex3.py  _ex4.py  _ex5.py  _ex6.py  _ex7.py  _ex8.py  _ex9.py  _ex_utilities.py
pykep/leg/: CMakeLists.txt  __init__.py  _zoh.py  _zoh_ss.py
pykep/orbit_plots/: CMakeLists.txt  __init__.py  _plots.py
pykep/phasing/: CMakeLists.txt  __init__.py  _dbscan.py  _knn.py  _lambert.py
pykep/planet/: CMakeLists.txt  __init__.py  planet.cpp  planet_docstrings.cpp  planet_docstrings.hpp  python_base.h
pykep/plot/: CMakeLists.txt  __init__.py  _ballistic.py  _lambert.py  _mit.py  _planet.py  _sf_leg.py  test.ipynb
pykep/pontryagin/: __init__.py  _dynamics.py  _leg.py
pykep/sims_flanagan/: CMakeLists.txt  __init__.py  (+1 more)
src/: CMakeLists.txt  asteroid_gtoc2.cpp  asteroid_gtoc2.h  asteroid_gtoc5.cpp  asteroid_gtoc5.h  asteroid_gtoc7.cpp  asteroid_gtoc7.h  astro_constants.h  config.h  epoch.cpp  epoch.h  exceptions.h  io.h  keplerian_toolbox.h  lambert_problem.cpp  lambert_problem.h  lambert_problemOLD.cpp  lambert_problemOLD.h  linalg.cpp  planet.cpp  planet.h  planet_js.cpp  planet_js.h  planet_mpcorb.cpp  planet_mpcorb.h  planet_ss.cpp  planet_ss.h  planet_tle.cpp  planet_tle.h  serialization.h  zero_hold_kep_problem.cpp
test/: CMakeLists.txt  basic_transfers_test.cpp  catch.hpp  catch_main.cpp  convert_anomalies_test.cpp  encodings_test.cpp  epoch_test.cpp  flyby_test.cpp  ic2mee2ic_test.cpp  ic2par2ic_test.cpp  lambert_problem_test.cpp  leg_sims_flanagan_alpha_test.cpp  leg_sims_flanagan_alpha_udp.hpp  leg_sims_flanagan_test.cpp  leg_sims_flanagan_udp.hpp  leg_zoh_ss_test.cpp  leg_zoh_test.cpp  mee2par2mee_test.cpp  mima_test.cpp  planet_test.cpp  propagate_keplerian_test.cpp  propagate_lagrangian_test.cpp  stm_test.cpp  ta_bcp_test.cpp  ta_cr3bp_test.cpp  ta_kep_test.cpp  ta_pontryagin_cartesian_test.cpp  ta_pontryagin_equinoctial_test.cpp  ta_zero_hold_cr3bp_test.cpp  ta_zero_hold_kep_test.cpp  ta_zoh_cr3bp_test.cpp  ta_zoh_eq_test.cpp  ta_zoh_kep_test.cpp  ta_zoh_ss_test.cpp  test_helpers.hpp  udpla_jpl_lp_test.cpp  udpla_keplerian_test.cpp  udpla_vsop2013_test.cpp  zero_hold_kep_problem_test.cpp
tests/: CMakeLists.txt  anomalies_test.cpp  lambert_test.cpp  leg_s.cpp  leg_s_test.cpp  load_spice_kernel_test.cpp  propagate_lagrangian_test.cpp  propagate_lagrangian_u_test.cpp  propagate_taylor_J2_test.cpp  propagate_taylor_jorba_test.cpp  propagate_taylor_s_test.cpp  propagate_taylor_test.cpp  sgp4_test.cpp  spice_planet_test.cpp
(+584 files in other folders)
