INCLUDE(PyKEPPythonSetup.cmake)
SET(MANDATORY_LIBRARIES ${MANDATORY_LIBRARIES} keplerian_toolbox)
SET(PYKEP_INSTALL_PATH ${PYTHON_MODULES_PATH}/PyKEP)

MACRO(PYTHON_CPPMODULE arg1)
	SET_TARGET_PROPERTIES(${arg1} PROPERTIES PREFIX "")
	IF(PYDEXTENSION)
		SET_TARGET_PROPERTIES(${arg1} PROPERTIES SUFFIX ".pyd")
	ELSEIF(SOEXTENSION)
		SET_TARGET_PROPERTIES(${arg1} PROPERTIES SUFFIX ".so")
	ENDIF(PYDEXTENSION)
	TARGET_LINK_LIBRARIES(${arg1} ${MANDATORY_LIBRARIES} ${PYTHON_LIBRARIES} ${ARGN})
	STRING(REGEX REPLACE "^_" "" DIR_ARG ${arg1})
	INSTALL(TARGETS ${arg1}
                RUNTIME DESTINATION ${PYKEP_INSTALL_PATH}
                LIBRARY DESTINATION ${PYKEP_INSTALL_PATH}
	)
ENDMACRO(PYTHON_CPPMODULE)

INSTALL(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH})
ADD_LIBRARY(_PyKEP SHARED PyKEP.cpp)
PYTHON_CPPMODULE(_PyKEP)
